[B] Fix wrapping on login button
Resolves #2698

--- a/client/src/theme/styles/components/global/notification/_notification.scss
+++ b/client/src/theme/styles/components/global/notification/_notification.scss
@@ -109,6 +109,7 @@
       .screen-reader-text {
         @include utilityPrimary;
         position: relative;
+        margin: 0;
         overflow: visible;
         font-size: 12px;
       }
